<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/backdrop_height_venue_detail"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/image_view_backdrop"
                android:layout_width="match_parent"
                android:layout_height="@dimen/backdrop_height_venue_detail"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/button_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:clickable="true"
        android:src="@drawable/ic_star_border_white_24dp"
        app:layout_anchor="@id/appbar"
        app:layout_anchorGravity="bottom|right|end" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <!--
            NestedScrollView does not seem to obscure contents
            of this layout. Probably because of the definitive
            height given to the LinearLayout at the end of this
            view. Replacing the same with wrap content does not
            work.
            android:paddingBottom="?attr/actionBarSize"
        -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/padding"
            android:orientation="vertical"
            android:textSize="15sp">

            <include layout="@layout/venue_about" />

            <include layout="@layout/view_divider" />

            <TextView
                android:id="@+id/text_view_venue_call"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/padding"
                android:autoLink="phone"
                android:clickable="true"
                android:text="CALL"
                android:textSize="20sp"
                android:textStyle="bold" />

            <include layout="@layout/view_divider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_view_tag_line"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/storeId"
                    android:textSize="20sp"
                    />

                <TextView
                    android:id="@+id/text_view_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:maxLines="5"
                    android:textSize="15sp" />

            </LinearLayout>

            <include layout="@layout/view_divider" />

            <LinearLayout
                android:id="@+id/layLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/location"
                    android:textSize="20sp" />

                <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:tools="http://schemas.android.com/tools"
                    android:id="@+id/map"
                    android:name="com.google.android.gms.maps.SupportMapFragment"
                    android:layout_width="match_parent"
                    android:layout_height="140dp"
                    android:layout_marginTop="4dp"
                     />
            </LinearLayout>

            <include layout="@layout/view_divider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/social"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/text_view_social_fb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="4dp"
                    android:gravity="center"
                    android:text="@string/facebook"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text_view_social_twitter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="2dp"
                    android:gravity="center"
                    android:text="@string/twitter"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text_view_website"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:gravity="center"
                    android:text="@string/website"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <include layout="@layout/view_divider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:text="@string/similar"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/text_view_see_more"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:text="@string/see_more"
                        android:textColor="@color/colorAccent"
                        android:textSize="15sp" />
                </RelativeLayout>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycler_view_gallery_list"
                    android:layout_width="match_parent"
                    android:layout_height="140dp"
                    android:layout_marginTop="4dp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/spacing_medium" />

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>